--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<h1>hello how are you</h1>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><p style="color:blue">hello</p></p></h1>
+    <h1><p style="color: black">maid is crazy</p></h1>
 </body>
 </html>
